fix(fix migration bug)
