# src/routes/routes.js
@@ -19,8 +19,8 @@ const router = express.Router();
 
 const connectMulti = connectmultiparty();
 
-router.post('/api/v1/users', Validation.signupValidation, UserAuth.signup);
-router.post('/api/v1/users/signup', verifyToken, adminPermissions, Validation.signupValidation, UserAuth.signup);
+router.post('/api/v1/users/signup', Validation.signupValidation, UserAuth.signup);
+router.post('/api/v1/users', verifyToken, adminPermissions, Validation.signupValidation, UserAuth.signup);
 router.get('/api/v1/profiles/:username', Profile.user);
 router.get('/api/v1/profiles', verifyToken, Profile.fetchProfiles);
 router.put('/api/v1/profiles/:username', [verifyToken, connectMulti, canEditProfile, Validation.profileValidation, Validation.imageValidation], Profile.editProfile);
